Bug changes for the menu

--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
         </div>
         <div class="lil-leftside">
             <h3>WHO ARE WE?</h3>
-            <p>Step into Castro's Cafeteria, a lively spot wedged between Denbigh Castle and Ye Hole in Ye Wall. We, Borja Castro-Cabrera and Natasha, are here to infuse Liverpool with the spirit of Tenerife. Think tapas, Mechada, and a vibrant atmosphere that's pure sunshine!</p>
-            <p>At Castro's, Borja's culinary journey started from scratch, but now it's a full-blown flavor adventure. Our menu, born from Facetime sessions with family, boasts Tenerife's Mechada and more—fresh, delicious, and made with heaps of passion.</p>
-            <p>Castro's isn't just about food; it's a hub for connections. Our cozy space sparks conversations among strangers, turning them into friends over vibrant dishes. The energy spills into the nearby pubs, creating a fusion of English and Spanish camaraderie. Join us for unforgettable moments at Castro's Cafeteria! Your seat and a plate of goodness await!</p>
+            <p>Castro's Cafeteria is a lively spot located near the Liverpool Exchange Quarter.</p>
+            <p>We, Borja and Natasha, are here to infuse Liverpool with the spirit of Tenerife.</p>
+            <p>At Castro's, you’ll experience a flavour adventure. Our family developed menu, boasts Tenerife's Mechada and more.</p>
+            <p>Castro's isn't just about food. Our cozy space turns strangers into friends creating a fusion of English and Spanish culture. Join us for unforgettable moments at Castro's Cafeteria!</p>
         </div>
     </div>
 
@@ -387,7 +388,7 @@
                                 <!-- <img src="images/happy pineapple.png" alt=""> -->
                                 <div class="footer-social-media">
                                     <a href="https://www.instagram.com/castros_liverpool/"><img src="images/instagram.svg" alt="" class="footer-social-logo"></a>
-                                    <img onclick="alert('the email is castro8ba@gmail.com')" src="images/mail.svg" alt="" class="footer-social-logo">
+                                    <img class="email-logo" onclick="alert('the email is castro8ba@gmail.com')" src="images/mail.svg" alt="" class="footer-social-logo">
                                     <a href="https://www.tripadvisor.co.uk/Restaurant_Review-g186337-d26167431-Reviews-Castro_s_Cafetera-Liverpool_Merseyside_England.html"><img src="images/tripadvisor.svg" alt="" class="footer-social-logo"></a>
                                 </div>
                             </div>
@@ -398,7 +399,7 @@
                         <!-- <img src="images/happy pineapple.png" alt=""> -->
                         <div class="footer-social-media">
                             <a href="https://www.instagram.com/castros_liverpool/"><img src="images/instagram.svg" alt="" class="footer-social-logo"></a>
-                            <img onclick="alert('the email is castro8ba@gmail.com')" src="images/mail.svg" alt="" class="footer-social-logo">
+                            <img class="email-logo" onclick="alert('the email is castro8ba@gmail.com')" src="images/mail.svg" alt="" class="footer-social-logo">
                             <a href="https://www.tripadvisor.co.uk/Restaurant_Review-g186337-d26167431-Reviews-Castro_s_Cafetera-Liverpool_Merseyside_England.html"><img src="images/tripadvisor.svg" alt="" class="footer-social-logo"></a>
                         </div>
                     </div>
