--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
                 <div class="left-nav">
                     <ul class="nav-items">
                         <li><a href="menu.html">MENU</a></li>
-                        <li><a href="#">WHO WE ARE</a></li>
                     </ul>
                 </div>
                 <a href="index.html" class="logo">
@@ -44,7 +43,6 @@
             <div class="nav-menu-phone">
                 <ul class="nav-items">
                     <li><a href="menu.html">MENU</a></li>
-                    <li><a href="#">ABOUT US</a></li>
                     <li><a href="https://www.instagram.com/castros_liverpool/?hl=en-gb">GALLERY</a></li>
                     <li><a href="contactUs.html">CONTACT US</a></li>
                 </ul>
@@ -389,6 +387,7 @@
                                 <div class="footer-social-media">
                                     <a href="https://www.instagram.com/castros_liverpool/"><img src="images/instagram.svg" alt="" class="footer-social-logo"></a>
                                     <img class="email-logo" onclick="alert('the email is castro8ba@gmail.com')" src="images/mail.svg" alt="" class="footer-social-logo">
+                                    <a href="https://www.facebook.com/profile.php?id=100089406662436"><img src="images/facebookLogo.svg" alt=""></a>
                                     <a href="https://www.tripadvisor.co.uk/Restaurant_Review-g186337-d26167431-Reviews-Castro_s_Cafetera-Liverpool_Merseyside_England.html"><img src="images/tripadvisor.svg" alt="" class="footer-social-logo"></a>
                                 </div>
                             </div>
@@ -400,6 +399,7 @@
                         <div class="footer-social-media">
                             <a href="https://www.instagram.com/castros_liverpool/"><img src="images/instagram.svg" alt="" class="footer-social-logo"></a>
                             <img class="email-logo" onclick="alert('the email is castro8ba@gmail.com')" src="images/mail.svg" alt="" class="footer-social-logo">
+                            <a href="https://www.facebook.com/profile.php?id=100089406662436"><img src="images/facebookLogo.svg" alt=""></a>
                             <a href="https://www.tripadvisor.co.uk/Restaurant_Review-g186337-d26167431-Reviews-Castro_s_Cafetera-Liverpool_Merseyside_England.html"><img src="images/tripadvisor.svg" alt="" class="footer-social-logo"></a>
                         </div>
                     </div>
