--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,6 @@
             <div class="left-nav">
                 <ul class="nav-items">
                     <li><a href="#">MENU</a></li>
-                    <li><a href="#">ABOUT US</a></li>
                 </ul>
             </div>
             <a href="index.html" class="logo">
@@ -23,8 +22,8 @@
             <div class="right-nav">
                 <div class="top-right-nav">
                     <ul class="nav-items">
-                        <li><a href="#">GALLERY</a></li>
-                        <li><a href="#">CONTACT US</a></li>
+                        <li><a href="https://www.instagram.com/castros_liverpool/?hl=en-gb">GALLERY</a></li>
+                        <li><a href="contactUs.html">CONTACT US</a></li>
                     </ul>
                 </div>
             </div>
@@ -290,7 +289,8 @@
                                 <!-- <img src="images/happy pineapple.png" alt=""> -->
                                 <div class="footer-social-media">
                                     <a href="https://www.instagram.com/castros_liverpool/"><img src="images/instagram.svg" alt="" class="footer-social-logo"></a>
-                                    <img onclick="alert('the email is castro8ba@gmail.com')" src="images/mail.svg" alt="" class="footer-social-logo">
+                                    <img class="email-logo" onclick="alert('the email is castro8ba@gmail.com')" src="images/mail.svg" alt="" class="footer-social-logo">
+                                    <a href="https://www.facebook.com/profile.php?id=100089406662436"><img src="images/facebookLogo.svg" alt=""></a>
                                     <a href="https://www.tripadvisor.co.uk/Restaurant_Review-g186337-d26167431-Reviews-Castro_s_Cafetera-Liverpool_Merseyside_England.html"><img src="images/tripadvisor.svg" alt="" class="footer-social-logo"></a>
                                 </div>
                             </div>
@@ -301,7 +301,8 @@
                         <!-- <img src="images/happy pineapple.png" alt=""> -->
                         <div class="footer-social-media">
                             <a href="https://www.instagram.com/castros_liverpool/"><img src="images/instagram.svg" alt="" class="footer-social-logo"></a>
-                            <img onclick="alert('the email is castro8ba@gmail.com')" src="images/mail.svg" alt="" class="footer-social-logo">
+                            <img class="email-logo" onclick="alert('the email is castro8ba@gmail.com')" src="images/mail.svg" alt="" class="footer-social-logo">
+                            <a href="https://www.facebook.com/profile.php?id=100089406662436"><img src="images/facebookLogo.svg" alt=""></a>
                             <a href="https://www.tripadvisor.co.uk/Restaurant_Review-g186337-d26167431-Reviews-Castro_s_Cafetera-Liverpool_Merseyside_England.html"><img src="images/tripadvisor.svg" alt="" class="footer-social-logo"></a>
                         </div>
                     </div>
