Animations added to the website

--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
 
     <div class="menu-section">
         <div class="butties">
-            <div class="title">
+            <div class="title hidden">
                 <h2>BOCADILLOS - BUTTIES</h2>
             </div>
             <div class="content">
 
                 <div class="column">
-                    <div class="buttie-cell">
+                    <div class="buttie-cell hidden">
                         <div class="buttie-title">
                             <h3>THE MECHADA</h3>
                         </div>
@@ -94,7 +94,7 @@
                             <span>Pulled beef brisket, peppers, onions, fontina cheese, Mojo Picon</span>
                         </div>
                     </div>
-                    <div class="buttie-cell">
+                    <div class="buttie-cell hidden">
                         <div class="buttie-title">
                             <h3>EL LOMO</h3>
                         </div>
@@ -102,7 +102,7 @@
                             <span>Marinated Pork Loin, fontina cheese, tomato, alioli</span>
                         </div>
                     </div>
-                    <div class="buttie-cell">
+                    <div class="buttie-cell hidden">
                         <div class="buttie-title">
                             <h3>THE POLLO</h3>
                         </div>
@@ -110,7 +110,7 @@
                             <span>Marinated Chicken breast, fontina cheese, tomato, onion, alioli</span>
                         </div>
                     </div>
-                    <div class="buttie-cell">
+                    <div class="buttie-cell hidden">
                         <div class="buttie-title">
                             <h3>THE PATA</h3>
                         </div>
@@ -122,7 +122,7 @@
                 </div>
 
                 <div class="column">
-                    <div class="buttie-cell">
+                    <div class="buttie-cell hidden">
                         <div class="buttie-title">
                             <h3>SERRANITO</h3>
                         </div>
@@ -130,7 +130,7 @@
                             <span>Pork loin, Jamon iberico, fontina cheese, tomato, padron peppers, alioli</span>
                         </div>
                     </div>
-                    <div class="buttie-cell">
+                    <div class="buttie-cell hidden">
                         <div class="buttie-title">
                             <h3>THE CAPRESE (V)</h3>
                         </div>
@@ -138,7 +138,7 @@
                             <span>Tomato, pesto, buffala mozzarella, olive oil</span>
                         </div>
                     </div>
-                    <div class="buttie-cell">
+                    <div class="buttie-cell hidden">
                         <div class="buttie-title">
                             <h3>THE AVOWEVO (V)</h3>
                         </div>
@@ -146,7 +146,7 @@
                             <span>Avocado, tomato, fontina cheese, fried egg, alioli</span>
                         </div>
                     </div>
-                    <div class="buttie-cell">
+                    <div class="buttie-cell hidden">
                         <div class="buttie-title">
                             <h3>THE HAMON</h3>
                         </div>
@@ -157,7 +157,7 @@
                 </div>
 
                 <div class="column">
-                    <div class="buttie-cell">
+                    <div class="buttie-cell hidden">
                         <div class="buttie-title">
                             <h3>EL CASTRO</h3>
                         </div>
@@ -165,7 +165,7 @@
                             <span>Pork loin, chorizo, tomato, avocado, smoked cheese, alioli</span>
                         </div>
                     </div>
-                    <div class="buttie-cell">
+                    <div class="buttie-cell hidden">
                         <div class="buttie-title">
                             <h3>THE MIKE</h3>
                         </div>
@@ -173,7 +173,7 @@
                             <span>Mechada (Beef brisket), tortilla de papas, cheese, mojo picon, alioli</span>
                         </div>
                     </div>
-                    <div class="buttie-cell">
+                    <div class="buttie-cell hidden">
                         <div class="buttie-title">
                             <h3>TOASTIES</h3>
                         </div>
@@ -182,7 +182,7 @@
                             <span>Just Cheese - Vegan toastie</span>
                         </div>
                     </div>
-                    <div class="buttie-cell">
+                    <div class="buttie-cell hidden">
                         <div class="buttie-title">
                             <h3>SAUSAGE & EGG TOASTIE</h3>
                         </div>
@@ -196,11 +196,11 @@
         </div>
 
         <div class="tapas-smallPlates">
-            <div class="title">
+            <div class="title hidden">
                 <h2>TAPAS - SMALL PLATES</h2>
             </div>
             <div class="tapa-content">
-                <div class="tapas-cell">
+                <div class="tapas-cell hidden">
                     <div class="tapas-title">
                         <h3>TORTILLA DE PAPAS (V) **Ask for today's filling</h3>
                     </div>
@@ -209,7 +209,7 @@
                         <span>Or stick it on a butty with cheese, tomato, alioli</span>
                     </div>
                 </div>
-                <div class="tapas-cell">
+                <div class="tapas-cell hidden">
                     <div class="tapas-title">
                         <h3>ALBONDIGAS</h3>
                     </div>
@@ -218,7 +218,7 @@
                         <span>Or stick them on a butty with buffala mozzarella</span>
                     </div>
                 </div>
-                <div class="tapas-cell">
+                <div class="tapas-cell hidden">
                     <div class="tapas-title">
                         <h3>PAPAS CON MOJO (V)</h3>
                     </div>
@@ -226,7 +226,7 @@
                         <span>Canarian style potatoes, Mojo Picon</span>
                     </div>
                 </div>
-                <div class="tapas-cell last">
+                <div class="tapas-cell last hidden">
                     <div class="tapas-title">
                         <h3>PADRON PEPPERS</h3>
                     </div>
@@ -237,11 +237,11 @@
         </div>
 
         <div class="moreScran">
-            <div class="title">
+            <div class="title hidden">
                 <h2>MORE SCRAN</h2>
             </div>
             <div class="scran-content">
-                <div class="moreScran-cell">
+                <div class="moreScran-cell hidden">
                     <div class="moreScran-title">
                         <h3>MEAT AND CHEESE PLATTER</h3>
                     </div>
@@ -249,7 +249,7 @@
                         <span>Selection of meats, cheeses, olives & bread</span>
                     </div>
                 </div>
-                <div class="moreScran-cell">
+                <div class="moreScran-cell hidden">
                     <div class="moreScran-title">
                         <h3>PAPAS LOCAS</h3>
                     </div>
@@ -257,7 +257,7 @@
                         <span>Loaded Fries with Mechada (Beef brisket), cheese, onions, house sauce trio</span>
                     </div>
                 </div>
-                <div class="moreScran-cell last">
+                <div class="moreScran-cell last hidden">
                     <div class="moreScran-title">
                         <h3>SMASH BURGER **only available Fridays & Saturdays</h3>
                     </div>
@@ -270,14 +270,14 @@
         </div>
 
         <div class="extras">
-            <div class="title">
+            <div class="title hidden">
                 <h2>EXTRAS</h2>
             </div>
-            <div class="extras-content">
+            <div class="extras-content hidden">
                 <div class="extras-title">
                     <h3>FRIED EGG/ AVOCADO/ SAUCE</h3>
                 </div>
-                <div class="extras-title">
+                <div class="extras-title hidden">
                     <h3>FRIES</h3>
                 </div>
             </div>
