--- a/menu.html
+++ b/menu.html
@@ -43,30 +43,14 @@
     </header>
 
     <div class="menu-section">
-        <style>
-
-            .nav-items li a:hover {
-                color:black;
-                }
-
-            .menu-section {
-                padding-top: 4rem;
-            }
-
-            @media only screen and (max-width: 736px) {
-                .menu-section {
-                    padding-top: 1rem;
-                }
-            }
-        </style>
         <div class="butties">
-            <div class="title">
+            <div class="title hidden">
                 <h2>BOCADILLOS - BUTTIES</h2>
             </div>
             <div class="content">
 
-                <div class="column 1">
-                    <div class="buttie-cell">
+                <div class="column">
+                    <div class="buttie-cell hidden">
                         <div class="buttie-title">
                             <h3>THE MECHADA</h3>
                         </div>
@@ -74,7 +58,7 @@
                             <span>Pulled beef brisket, peppers, onions, fontina cheese, Mojo Picon</span>
                         </div>
                     </div>
-                    <div class="buttie-cell">
+                    <div class="buttie-cell hidden">
                         <div class="buttie-title">
                             <h3>EL LOMO</h3>
                         </div>
@@ -82,7 +66,7 @@
                             <span>Marinated Pork Loin, fontina cheese, tomato, alioli</span>
                         </div>
                     </div>
-                    <div class="buttie-cell">
+                    <div class="buttie-cell hidden">
                         <div class="buttie-title">
                             <h3>THE POLLO</h3>
                         </div>
@@ -90,7 +74,7 @@
                             <span>Marinated Chicken breast, fontina cheese, tomato, onion, alioli</span>
                         </div>
                     </div>
-                    <div class="buttie-cell">
+                    <div class="buttie-cell hidden">
                         <div class="buttie-title">
                             <h3>THE PATA</h3>
                         </div>
@@ -101,8 +85,8 @@
 
                 </div>
 
-                <div class="column 2">
-                    <div class="buttie-cell">
+                <div class="column">
+                    <div class="buttie-cell hidden">
                         <div class="buttie-title">
                             <h3>SERRANITO</h3>
                         </div>
@@ -110,7 +94,7 @@
                             <span>Pork loin, Jamon iberico, fontina cheese, tomato, padron peppers, alioli</span>
                         </div>
                     </div>
-                    <div class="buttie-cell">
+                    <div class="buttie-cell hidden">
                         <div class="buttie-title">
                             <h3>THE CAPRESE (V)</h3>
                         </div>
@@ -118,7 +102,7 @@
                             <span>Tomato, pesto, buffala mozzarella, olive oil</span>
                         </div>
                     </div>
-                    <div class="buttie-cell">
+                    <div class="buttie-cell hidden">
                         <div class="buttie-title">
                             <h3>THE AVOWEVO (V)</h3>
                         </div>
@@ -126,7 +110,7 @@
                             <span>Avocado, tomato, fontina cheese, fried egg, alioli</span>
                         </div>
                     </div>
-                    <div class="buttie-cell">
+                    <div class="buttie-cell hidden">
                         <div class="buttie-title">
                             <h3>THE HAMON</h3>
                         </div>
@@ -136,8 +120,8 @@
                     </div>
                 </div>
 
-                <div class="column 3">
-                    <div class="buttie-cell">
+                <div class="column">
+                    <div class="buttie-cell hidden">
                         <div class="buttie-title">
                             <h3>EL CASTRO</h3>
                         </div>
@@ -145,7 +129,7 @@
                             <span>Pork loin, chorizo, tomato, avocado, smoked cheese, alioli</span>
                         </div>
                     </div>
-                    <div class="buttie-cell">
+                    <div class="buttie-cell hidden">
                         <div class="buttie-title">
                             <h3>THE MIKE</h3>
                         </div>
@@ -153,7 +137,7 @@
                             <span>Mechada (Beef brisket), tortilla de papas, cheese, mojo picon, alioli</span>
                         </div>
                     </div>
-                    <div class="buttie-cell">
+                    <div class="buttie-cell hidden">
                         <div class="buttie-title">
                             <h3>TOASTIES</h3>
                         </div>
@@ -162,7 +146,7 @@
                             <span>Just Cheese - Vegan toastie</span>
                         </div>
                     </div>
-                    <div class="buttie-cell">
+                    <div class="buttie-cell hidden">
                         <div class="buttie-title">
                             <h3>SAUSAGE & EGG TOASTIE</h3>
                         </div>
@@ -176,11 +160,11 @@
         </div>
 
         <div class="tapas-smallPlates">
-            <div class="title">
+            <div class="title hidden">
                 <h2>TAPAS - SMALL PLATES</h2>
             </div>
             <div class="tapa-content">
-                <div class="tapas-cell">
+                <div class="tapas-cell hidden">
                     <div class="tapas-title">
                         <h3>TORTILLA DE PAPAS (V) **Ask for today's filling</h3>
                     </div>
@@ -189,7 +173,7 @@
                         <span>Or stick it on a butty with cheese, tomato, alioli</span>
                     </div>
                 </div>
-                <div class="tapas-cell">
+                <div class="tapas-cell hidden">
                     <div class="tapas-title">
                         <h3>ALBONDIGAS</h3>
                     </div>
@@ -198,7 +182,7 @@
                         <span>Or stick them on a butty with buffala mozzarella</span>
                     </div>
                 </div>
-                <div class="tapas-cell">
+                <div class="tapas-cell hidden">
                     <div class="tapas-title">
                         <h3>PAPAS CON MOJO (V)</h3>
                     </div>
@@ -206,7 +190,7 @@
                         <span>Canarian style potatoes, Mojo Picon</span>
                     </div>
                 </div>
-                <div class="tapas-cell">
+                <div class="tapas-cell last hidden">
                     <div class="tapas-title">
                         <h3>PADRON PEPPERS</h3>
                     </div>
@@ -217,11 +201,11 @@
         </div>
 
         <div class="moreScran">
-            <div class="title">
+            <div class="title hidden">
                 <h2>MORE SCRAN</h2>
             </div>
             <div class="scran-content">
-                <div class="moreScran-cell">
+                <div class="moreScran-cell hidden">
                     <div class="moreScran-title">
                         <h3>MEAT AND CHEESE PLATTER</h3>
                     </div>
@@ -229,7 +213,7 @@
                         <span>Selection of meats, cheeses, olives & bread</span>
                     </div>
                 </div>
-                <div class="moreScran-cell">
+                <div class="moreScran-cell hidden">
                     <div class="moreScran-title">
                         <h3>PAPAS LOCAS</h3>
                     </div>
@@ -237,7 +221,7 @@
                         <span>Loaded Fries with Mechada (Beef brisket), cheese, onions, house sauce trio</span>
                     </div>
                 </div>
-                <div class="moreScran-cell">
+                <div class="moreScran-cell last hidden">
                     <div class="moreScran-title">
                         <h3>SMASH BURGER **only available Fridays & Saturdays</h3>
                     </div>
@@ -250,14 +234,14 @@
         </div>
 
         <div class="extras">
-            <div class="title">
+            <div class="title hidden">
                 <h2>EXTRAS</h2>
             </div>
-            <div class="extras-content">
+            <div class="extras-content hidden">
                 <div class="extras-title">
                     <h3>FRIED EGG/ AVOCADO/ SAUCE</h3>
                 </div>
-                <div class="extras-title">
+                <div class="extras-title hidden">
                     <h3>FRIES</h3>
                 </div>
             </div>
