Changes to some text and images

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 </head>
 <body>
     <main id="top">
+        <div class="background-container">
+            <img src="images/main_image.png" alt="" class="showing background">
+            <img src="images/main_image2.JPG" alt="" class="background">
+            <img src="images/main_image3.JPG" alt="" class="background">
+            <img src="images/main_image4.JPG" alt="" class="background">
+            <img src="images/main_image5.JPG" alt="" class="background">
+
+        </div>
+
         <header class="top-nav">
             <div class="nav-menu">
                 <div class="left-nav">
@@ -60,6 +69,7 @@
  
             </div>
         </div>
+
     </main>
 
 
@@ -69,10 +79,16 @@
         </div>
         <div class="lil-leftside">
             <h3>WHO ARE WE?</h3>
-            <p>Castro's Cafeteria is a lively spot located near the Liverpool Exchange Quarter.</p>
-            <p>We, Borja and Natasha, are here to infuse Liverpool with the spirit of Tenerife.</p>
-            <p>At Castro's, you’ll experience a flavour adventure. Our family developed menu, boasts Tenerife's Mechada and more.</p>
-            <p>Castro's isn't just about food. Our cozy space turns strangers into friends creating a fusion of English and Spanish culture. Join us for unforgettable moments at Castro's Cafeteria!</p>
+            <p>🌴 Welcome to our little slice of Canarian paradise in the heart of Liverpool! 🌴</p>
+            <p>Hola Amigos! We're Borja and Tasha, the duo behind this cosy Canarian café with a passion for good vibes, great food, and creating a space that feels just like home.</p>
+            <p>Originally from Tenerife, Borja brings that authentic Canarian flavour to our dishes, while Tasha who is from Liverpool, brings a bit of that Scouse spirit into everything we do.</p>
+            <p>After spending what feels like a lifetime in the hospitality world, we decided to put our heads together and bring a taste of the Canary Islands to Liverpool's city centre. Think boss flavour, laid-back vibes, and plenty of smiles to go around.</p>
+            <p>Whether you're craving a butty on your lunch break or an afternoon spent sipping on sangria and eating some tapas, we've got you covered. Our menu is inspired by recipes from Borjas Nan and Aunties, prepared using only the freshest ingredients and a whole lot of passion.</p>
+            <p>But more than just food, our café is a place to come with your friends have a few cheeky beers & leave with new mates! So come on in, grab a seat, and let us take you to the sunny shores of the Canary Islands, right here in the heart of Liverpool.</p>
+            <p>Can't wait to meet you all!</p>
+            <p>Borja & Tasha</p>
+
+
         </div>
     </div>
 
