--- a/menu.html
+++ b/menu.html
@@ -8,6 +8,11 @@
     <script src="menu.js" defer></script>
 </head>
 <body>
+    <style>
+        body {
+            height: 100%;
+        }
+    </style>
     <header class="top-nav">
         <div class="nav-menu">
             <div class="left-nav">
@@ -42,7 +47,7 @@
         </div>
     </header>
 
-    <div class="menu-section">
+    <div class="menu-section menu">
         <div class="butties">
             <div class="title hidden">
                 <h2>BOCADILLOS - BUTTIES</h2>
