changes to font and button from banner

--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
         </header>
         <div class="main-screen">
             <div class="rightSide">
-                <h2>BOCADILLOS Y MUCHO AMOR</h2>
+                <h2 id="nice-font">BOCADILLOS Y MUCHO AMOR</h2>
                 <h3>Open for breakfast & lunch</h3>
                 <!-- <button>Contact Us</button> -->
                 <!-- sample html for this button-->
 
-<a href="" class="original-button">CHECK IT OUT</a>
+<!-- <a href="" class="original-button">CHECK IT OUT</a> -->
 
  
             </div>
