changes on font for main screen

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <div class="lil-about-us" id="aboutUs">
         <div class="lil-rightside">
-            <img src="images/castro.jpg" alt="">
+            <img src="images/borjaTasha.png" alt="">
         </div>
         <div class="lil-leftside">
             <h3>WHO ARE WE?</h3>
