--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         </div>
 
         <div class="info-catering">
-            <span>Castro's is also available for catering</span>
+            <span class="info-cater-bold">Castro's is also available for catering</span>
             <span class="email">castro8ba@gmail.com</span>
         </div>
     </div>
